test/tests/compiler/18_structures/invalid_parse/struct_decl_tag_kw.plx
# cannot use keyword (like 'for') as struct tag
type struc loop (a: i32)
